# AHFinder

./: .gitignore  CLAUDE.md  Journal.md  README.md  pyproject.toml
doc/: ImplementationTests.md  ImplementationTests_level_set.md  algorithm.md
examples/: area_invariance_under_boosts.py  area_test_v2.py  benchmark_all_configs.py  benchmark_cached_metric.py  benchmark_compressed_jacobian.py  benchmark_full_finder.py  benchmark_interpolation.py  benchmark_overhead.py  benchmark_sparse_jacobian.py  benchmark_vectorized.py  benchmark_vectorized_finder.py  benchmark_vectorized_jacobian.py  detailed_profile.py  find_horizon.py  minimal_area_test.py  plot_jacobian_sparsity.py  profile_boosted.py  profile_finder.py  profile_full_finder.py  profile_gpu_potential.py  profile_residual.py  profile_summary.py  quick_area_test.py  test_fast_boosted.py  test_horizon_fast.py  test_lagrange_interpolator.py  test_levelflow.py  test_sparse_jacobian.py  visualize_horizon.py
gallery/: create_combined_gallery.py  generate_gallery.py
notebooks/: interactive_horizon_finder.ipynb
notebooks/.virtual_documents/: interactive_horizon_finder.ipynb
src/ahfinder/: __init__.py  finder.py  interpolation.py  interpolation_lagrange.py  jacobian.py  jacobian_compressed.py  jacobian_sparse.py  jacobian_vectorized.py  residual.py  residual_fast.py  residual_vectorized.py  solver.py  stencil.py  surface.py  visualization.py
tests/: __init__.py  test_boosted.py  test_boosted_kerr.py  test_interpolation.py  test_jacobian.py  test_kerr.py  test_residual.py  test_schwarzschild.py  test_surface.py
(+19 files in other folders)
